Fix a corner case of text wrapping in views::StyledLabel

Views are aligned to integer coordinates, but typesetting is not. If
part of a line has a stylerange, it may need to shift up to a pixel to
the right, compared to an earlier typesetting attempt.

Normally this is fine - more text will just wrap to the next line.
However, if this occurs for the *last* word on a line,
gfx::ElideRectangleText may split that word. Instead, that word should
just wrap on to the next line.

To fix, allow ElideRectangleText to signal when it splits the first
word in an elide attempt. StyledLabel just needs to start a new line
in this case rather than putting the split word at the end of the
current line.

Bug: 799300, 799213
Change-Id: Ibcc6134872b06c56d19bad5f7336534189fa316a
Reviewed-on: https://chromium-review.googlesource.com/866277
Reviewed-by: Michael Wasserman <msw@chromium.org>
Commit-Queue: Trent Apted <tapted@chromium.org>
Cr-Commit-Position: refs/heads/master@{#529646}
Former-commit-id: 929a7aaea3d2d340ec56053cb0dc6e7eabe8ab8a